# Kiroku

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  tray_icon.rs
src/components/: Button.styles.css  Button.tsx
